[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -6,7 +6,9 @@ body {
 .center {
     text-align: center;
 }
-
+.right {
+    text-align : right;
+}
 .text-big {
     font-size: 300%;
 }
@@ -16,7 +18,7 @@ body {
 }
 
 .img-medium {
-    height: 100px;
+    height: 80px;
 }
 .container{
     max-width: 800px;
